engine/baml-lib/baml/tests/validation_files/enum/duplicate_value.baml
enum Test {
    ONE
    TWO
    ONE
}
// error: Value "ONE" is already defined on enum "Test".
//   -->  /Users/aaronvillalpando/Projects/gloo-lang/engine/baml/baml/tests/validation_files/enum/duplicate_value.baml:4
//    | 
//  3 |     TWO
//  4 |     ONE
//  5 | }
//    | 
